# UDT

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  LICENSE.BSD  README.md  build.sh  make_common.mak  make_linux.mak  make_macosx.mak  make_windows.mak
jvm/include/windows/: jawt_md.h  jni_md.h
src/: api.cpp  api.h  buffer.cpp  buffer.h  cache.cpp  cache.h  ccc.cpp  channel.cpp  core.cpp  core.h  epoll.cpp  epoll.h  list.cpp  list.h  packet.h  queue.cpp  queue.h  udt.h  udtCommon.cpp  udtCommon.h  window.cpp  window.h
src/jni/: JNICCC.cpp  JNICCC.h  JNICCCFactory.cpp  JNICCCFactory.h  JNIHelpers.cpp  JNIHelpers.h  com_barchart_udt_CCC.cpp  com_barchart_udt_CCC.h  com_barchart_udt_SocketUDT.cpp  com_barchart_udt_SocketUDT.h
udt-doc/: 0001-Added-BARCHART-2013-05-11-2013-05-12-already-applied.patch  0002-Refactored-win-osx-and-32-64-bit-preprocessor-symbol.patch  0003-Code-polish.-removed-unnecessary-preprocessor-symbol.patch  0004-Fixed-unitialized-variable.patch  README.txt  RELEASE_NOTES.txt  udt-2009.ppt
